Fixed bug with filters on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@ option {
 @media screen and (max-width: 810px) {
   .open-close[aria-expanded='true'] {
     @apply flex visible w-screen h-screen top-0 left-0 overflow-y-auto  rounded-none flex-col;
-    z-index: 999999999999999999999999999;
+    z-index: 90;
   }
 
   .open-close[aria-expanded='false'] {
